--- a/.github/workflows/daily_fetch.yml
+++ b/.github/workflows/daily_fetch.yml
@@ -2,7 +2,7 @@ name: Daily data fetch
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs every day at midnight (UTC)
+    - cron: "0 6 * * *" # Runs every day at 06:00 UTC
   workflow_dispatch:
     # Allows you to manually trigger this workflow from the GitHub Actions page.
 
